# policy_risk_persona_simulator

./: .env.example  .gitattributes  .gitignore  README.md  policy_json_converter.py  pyproject.toml  requirements.txt  run_qwen.py
backend/: main.py  test_fetch_qna_call_api.py
backend/ai_simulation_core/: pipeline.py
backend/ai_simulation_core/llm/: llm_gateway.py  qwen_model.py
backend/ai_simulation_core/llm_gateway/: gateway.py
backend/ai_simulation_core/llm_inference/: get_nemotron_personas.py  get_poilcy_data.py  personas_filter.py  run_citizen_v2.py  validator.py
backend/ai_simulation_core/personas/: persona_downloader.py  persona_sampler.py
backend/ai_simulation_core/policies/: policy_repository.py
backend/ai_simulation_core/prompts/: citizen_prompt.py  civil_servant_prompt.py
backend/ai_simulation_core/simulations/: citizen_simulation.py  civil_servant_simulation.py
backend/data/fag_data/: civil_policy_qna_list.json  civil_policy_qna_metadata.json
backend/data/law_data/: law_body.py  law_list.csv  law_list.py
backend/data/qna_call_data/: qna_call_metadata.json
backend/data/test_outputs/: citizen_sample.json  citizen_sample_classified.json
backend/data/공공 데이터 포털 민원 자료/: 경찰청 경기도북부경찰청_경찰서별 국민신문고 처리현황_20251231.csv  공무원연금공단_급여청구 민원처리현황_20251231.csv  대전광역시_국민신문고 접수 처리현황(민원분야)_20260531.csv  서울특별시 금천구_민원 접수처리 현황_20260624.csv  (+1 more)
backend/risk_scoring/: classifier.py  scorer.py
backend/scoring/: citizen_prompt.py  civil-complaint-risk.yaml  classifier.py  risk_classifier.py  risk_keywords.py  risk_scorer.py  run_citizen.py  scorer.py  validator.py
(+10 files in other folders)
